# xmlplcc

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
src/xmlpl/: Builder.h  CodeGenerator.h  ErrorHandler.cpp  ErrorHandler.h  Language.cpp  Language.h  LibraryImporter.cpp  LibraryImporter.h  Location.cpp  Location.h  Makefile.am  Options.cpp  Options.h  Utils.cpp  Utils.h  lines.sh  main.cpp  xmlplcc.cpp  xmlplcc.h
src/xmlpl/parser/: Makefile.am  TargetType.h  TargetTypeFlags.h  XmlPL.g  XmlPLLexer.cpp  XmlPLLexer.hpp  XmlPLLexerTokenTypes.hpp  XmlPLParser.cpp  XmlPLParser.hpp  extractKeywords.sh
tests/: Makefile.am  Makefile.common  compilerTest.in  prettyXMLParser.in
tests/BugTests/: Makefile.am
tests/BugTests/data/: AttributeCompareTest.xpl  DoubleFilterTest.stdout  DoubleFilterTest.xpl  ForeachSubExprTest.xpl  ForeachXPathBreakTest.stdout.expect  ForeachXPathBreakTest.xpl  ForeachXPathContinueTest.xpl  ForeachXPathReturnTest.xpl  ParentedAppendTest.stdout.expect  ParentedAppendTest.xpl  ParseSegFaultTest.stderr  ParseSegFaultTest.xpl  SwitchQNameTest.xpl
tests/CompilerTests/: Makefile.am
tests/CompilerTests/data/: AssignOpTest.stdout.expect  AssignOpTest.xpl  AssignmentTest.stdout.expect  AssignmentTest.xpl  BadCallByReferenceTest.stderr.expect  BadCallByReferenceTest.xpl  BinaryExprTest.stdout.expect  BinaryExprTest.xpl  BuilderTargetTest.stdout.expect  BuilderTargetTest.xpl  CallByReferenceTest.xpl  CastTest.xpl  CastingTargetTest.xpl  ConstantsTest.stdout.expect  ConstantsTest.xpl  ContextRefTest.stdout  ContextRefTest.stdout.expect  ContextRefTest.xpl  ContextStreamTest.stdout  ContextStreamTest.xpl  DefaultCaseTest.stdout.expect  DefaultCaseTest.xpl  ExceptionTest.stdout.expect  ExceptionTest.xpl  ForTest.xpl  FuncCallWOTarget.xpl  FunctionCallTest.stdin  FunctionCallTest.stdout.expect  FunctionCallTest.xpl  IfTest.stdout.expect  IfTest.xpl  IntegerSwitchTest.xpl  MainArgsTest.args  MainArgsTest.stdout.expect  MainArgsTest.xpl  MainTest.xpl  NativeTest.stdout.expect  NativeTest.xpl  PredContextCallTest.stdout.expect  PredContextCallTest.xpl  (+19 more)
tests/DOMTests/: DOMSerializeTest.cpp  LibXML2WellFormedTest.cpp  LibXML2XMLStreamTest.cpp  Makefile.am
tests/DOMTests/data/: DOMSerializeTest.stdout.expect  LibXML2WellFormedTest.stdin  LibXML2WellFormedTest.stdout.expect
tests/EnvironmentTests/: Makefile.am
tests/EnvironmentTests/data/: AmbiguousCallTest.stderr.expect  AmbiguousCallTest.xpl  BadVarRefTest.stderr.expect  BadVarRefTest.xpl  CastableCallTest.stdout.expect  CastableCallTest.xpl  DupFunc2Test.stderr.expect  DupFunc2Test.xpl  DupFuncArgsTest.stderr.expect  DupFuncArgsTest.xpl  DupFuncTest.stderr.expect  DupFuncTest.xpl  DupVarDeclTest.stderr.expect  DupVarDeclTest.xpl  FuncArgRefTest.stdout.expect  FuncArgRefTest.xpl  FuncArgShadowTest.stdout.expect  FuncArgShadowTest.xpl  FuncCallTest.stdout.expect  FuncCallTest.xpl  FuncDeclTest.stdout.expect  FuncDeclTest.xpl  FuncExtendTest.stdout.expect  FuncExtendTest.xpl  FuncForwardDeclTest.stdout.expect  FuncForwardDeclTest.xpl  FuncOnlyReturnTest.stderr.expect  FuncOnlyReturnTest.xpl  FuncOverloadTest.stdout.expect  FuncOverloadTest.xpl  FuncUndeclTest.stderr.expect  FuncUndeclTest.xpl  NoMatchingCallTest.stderr.expect  NoMatchingCallTest.xpl  NotAFuncTest.stderr.expect  NotAFuncTest.xpl  OverloadedCallTest.stdout.expect  OverloadedCallTest.xpl  VarDeclShadowTest.stdout.expect  VarDeclShadowTest.xpl  (+6 more)
tests/ImportTests/: Makefile.am
tests/ImportTests/data/: AmbigiousRefTest.stderr.expect  AmbigiousRefTest.xpl  ImportAsNameClashTest.stderr.expect  ImportAsNameClashTest.xpl  ImportAsTest.stdout.expect  ImportAsTest.xpl  ImportCallByRefTest.xpl  ImportConstantTest.stderr.expect  ImportConstantTest.xpl  ImportFuncArgsTest.xpl  ImportSingleTest.xpl  ImportVariableTest.xpl  ImportVersionTest.stdout.expect  ImportVersionTest.xpl  ImportWithTarget.xpl  NonExistantSymbol.stderr.expect  NonExistantSymbol.xpl  SameNSError.stderr  SameNSError.xpl  VersionRangeTest.stdout.expect  VersionRangeTest.xpl
tests/NameTests/: Makefile.am
tests/NameTests/data/: AttrQNameTest.stdout.expect  AttrQNameTest.xpl  CreatePrefixTest.stdout.expect  CreatePrefixTest.xpl  CreateQNameTest.stdout.expect  CreateQNameTest.xpl  ElemQNameTest.stdout.expect  ElemQNameTest.xpl  MinusInNameTest.xpl  PrefixNameTest.stdin  PrefixNameTest.stdout.expect  PrefixNameTest.xpl  UndeclaredPrefixTest.stderr.expect  UndeclaredPrefixTest.xpl
tests/ParserTests/: Makefile.am
tests/ParserTests/data/: AbbrevDescendantOrSelfTest.stderr  AbbrevDescendantOrSelfTest.stdout.expect  AbbrevDescendantOrSelfTest.xpl  AppendNoEffectTest.stdout.expect  AppendNoEffectTest.xpl  AssignOpTest.stdout.expect  AssignOpTest.xpl  AssignmentTest.stdout.expect  AssignmentTest.xpl  AttrStepsTest.stdout.expect  AttrStepsTest.xpl  AttributeTest.stdout.expect  AttributeTest.xpl  AxesTest.stdout.expect  AxesTest.xpl  ChildStepTest.stdout.expect  ChildStepTest.xpl  CommentTest.stdout.expect  CommentTest.xpl  ConstantsTest.stdout.expect  ConstantsTest.xpl  DivPathOperatorTest.stdout.expect  DivPathOperatorTest.xpl  FuncSeqArgsTest.stdout.expect  FuncSeqArgsTest.xpl  FunctionDeclTest.stdout.expect  FunctionDeclTest.xpl  ImportDeclTest.stdout.expect  ImportDeclTest.xpl  InvalidReturnTest.stderr.expect  InvalidReturnTest.xpl  LexNameTest.stdout.expect  LexNameTest.xpl  LexNumberTest.stdout.expect  LexNumberTest.xpl  LexStringTest.stdout.expect  LexStringTest.xpl  PIStepsTest.stdout.expect  PIStepsTest.xpl  ParentStepTest.stdout.expect  (+12 more)
tests/PathTests/: Makefile.am
tests/PathTests/data/: AttributeAxisTest.xpl  AttributeCompareTest.stdin  AttributeCompareTest.stdout.expect  AttributeCompareTest.xpl  BooleanTargetTest.xpl  (+19 more)
tests/RedirectTests/: Makefile.am
tests/RuntimeTests/: Makefile.am
tests/SequenceTests/: Makefile.am
tests/TypeValidationTests/: Makefile.am  genBinaryOpType.cpp  genUnaryOpType.cpp
tests/XMLTests/: Makefile.am
tests/libs/: Makefile.am  byref-0.0.1.xpl  hello-0.0.1.xpl  hello-0.0.2.xpl  hello-0.0.3.xpl  hello-0.0.4.xpl  hello2-0.0.1.xpl
(+192 files in other folders)
